# Adventure-game

./: CMakeLists.txt  README.md
titkov.vladislav-game-master/: .gitignore  CMakeLists.txt  Makefile  README.md
titkov.vladislav-game-master/CMake/: CppLint.cmake  FindBearLibTerminal.cmake
titkov.vladislav-game-master/include/: Coin.h  CoinsManager.h  CollisionManager.h  Controls.h  Food.h  FoodManager.h  Health.h  Level1.txt  Player.h  Poison.h  Reader.h  UObject.h  Wall.h
titkov.vladislav-game-master/include/components/: AIPursuedComponent.h  AIRandomWalkComponent.h  BoxComponent.h  BulletCountComponent.h  CollisionComponent.h  ColorComponent.h  DamageComponent.h  DoorComponent.h  FoodComponent.h  HealthComponent.h  MovementComponent.h  PlayerMoveControlComponent.h  PlayerShootControlComponent.h  PoisonComponent.h  PoisoningComponent.h  ScoresComponent.h  StepsComponent.h  TextureComponent.h  TextureComtonent.h  TransformComponent.h
titkov.vladislav-game-master/include/ecs/: Component.h  EntityManager.h  engine.h  entity.h  entity_manager.h  system.h  system_manager.h
titkov.vladislav-game-master/include/lib/: Context.h  PngConverter.h  SceneManager.h  context.h  i_scene.h  scene_manager.h
titkov.vladislav-game-master/include/maybe_trash_maybe_not/: context.h  i_scene.h  scene_manager.cpp  scene_manager.h
titkov.vladislav-game-master/include/scenes/: BattlefieldGameOverScene.h  BattlefieldScene.h  GameOverScene.h  LeaderboardScene.h  LevelScene.h  MainMenuScene.h  PauseScene.h  WinGameScene.h
titkov.vladislav-game-master/include/systems/: AISystem.h  BulletManagerSystem.h  CollisionSystem.h  GameOverSystem.h  MovementSystem.h  PauseSystem.h  PlayerMoveControlSystem.h  RenderingSystem.h  (+3 more)
titkov.vladislav-game-master/levels/: Battlefield.txt  Level1.txt  Level2.txt  Level3.txt  Level5.txt
titkov.vladislav-game-master/src/: CoinsManager.cpp  CollisionManager.cpp  Controls.cpp  FoodManager.cpp  Health.cpp  Player.cpp  Reader.cpp  UObject.cpp  main.cpp
(+84 files in other folders)
